# libnode

./: LICENSE  test.ps1  test.sh
.github/workflows/: build.yml  release-16.yml  release-22.yml  release.yml
android/: android-static.sh  android_configure.py  log.txt  trap-handler.h.patch
bash/: android-configure-static  android-static.sh  android_configure.py
patch/: node-legacy.patch  node.patch  node22.patch
scripts/: archive.py  build.py  config.py  patch.py  postproc-legacy.py  postproc.py
scripts/legacy/: headers.py  postproc.py  test.py
scripts22/: build.py
test/: CMakeLists.txt
